day8/postgres-sonar/sonarqube-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      containers:
        - image: sonarqube:7.1
          args:
            - -Dsonar.web.context=/
          name: sonarqube
          ports:
            - containerPort: 9000
              name: sonarqube
