day8/postgres-sonar/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
