day8/postgres-sonar/ingress_sonar.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: 9000
